--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/pizza.html" target="_self" rel="noopener noreferrer">Brick-Oven Pizza</a>
     </body>
 </html>
