--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pizza.html" target="_self" rel="noopener noreferrer">Brick-Oven Pizza</a>
+        <ul>
+            <li><a href="./recipes/pizza.html" target="_self" rel="noopener noreferrer">Brick-Oven Pizza</a></li>
+            <li><a href="./recipes/donuts.html" target="_self" rel="noopener noreferrer">Apple Cider Hawaiian Roll Donuts</a></li>
+        </ul>
     </body>
 </html>
