--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <ul>
             <li><a href="./recipes/pizza.html" target="_self" rel="noopener noreferrer">Brick-Oven Pizza</a></li>
             <li><a href="./recipes/donuts.html" target="_self" rel="noopener noreferrer">Apple Cider Hawaiian Roll Donuts</a></li>
+            <li><a href="./recipes/tomato-pie.html" target="_self" rel="noopener noreferrer">Tomato Pie</a></li>
         </ul>
     </body>
 </html>
