--- a/recipes/donuts.html
+++ b/recipes/donuts.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link href="../style.css" rel="stylesheet">
     </head>
     <body>
-        <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
+        <a class="home" href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
         <h1>Apple Cider Hawaiian Roll Donuts</h1>
         <p>Try these apple cider stuffed Hawaiian rolls that are reminiscent of apple donuts.</p>
         <img src="https://surl.li/iyxarh" alt="donuts">
