--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link href="../style.css" rel="stylesheet">
     </head>
     <body>
-        <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
+        <a class="home" href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
 
         <h1>Brick-Oven Pizza</h1>
         <img src="https://surli.cc/kplaly" alt="pizza">
