--- a/recipes/tomato-pie.html
+++ b/recipes/tomato-pie.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link href="../style.css" rel="stylesheet">
     </head>
     <body>
-        <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
+        <a class="home" href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
         <h1>Tomato Pie</h1>
         <p>This savory tomato pie has layers of juicy, ripe sliced tomatoes, cheese, bacon, and fresh basil! It's so delicious and perfect for summer.</p>
         <img src="https://surl.li/qqobub" alt="tomato pie">
